// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRoomToKampala should pop up a modal when modal button is clicked 1`] = `
<AddRoom
  locations={
    Array [
      Object {
        "__typename": "Location",
        "id": "1",
        "name": "Kampala",
      },
      Object {
        "__typename": "Location",
        "id": "2",
        "name": "Lagos",
      },
      Object {
        "__typename": "Location",
        "id": "3",
        "name": "Nairobi",
      },
    ]
  }
>
  <MrmModal
    buttonText="The Crest"
    className="add-room-modal"
    closeModal={false}
    handleCloseRequest={[Function]}
    modalButtonClassName="button"
    title="ADD ROOM"
  >
    <IconButtons
      buttonText="The Crest"
      modalButtonClassName="button"
      openModal={[Function]}
    >
      <button
        className="button"
        id="modal-button"
        onClick={[Function]}
      >
        The Crest
      </button>
    </IconButtons>
    <Modal
      ariaHideApp={false}
      bodyOpenClassName="ReactModal__Body--open"
      className="add-room-modal"
      closeTimeoutMS={0}
      contentLabel="Parent Modal"
      isOpen={true}
      onAfterOpen={[Function]}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={false}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "backgroundColor": "#ffffff",
            "border": "1px solid #CCCCCC",
            "borderRadius": "4px",
            "bottom": "auto",
            "boxShadow": "0 2px 40px 10px rgba(185, 180, 180, 0.2)",
            "fontFamily": "DINPro-Regular",
            "left": "50%",
            "marginRight": "-50%",
            "outline": "none",
            "overflow": "auto",
            "position": "absolute",
            "right": "auto",
            "top": "50%",
            "transform": "translate(-50%, -50%)",
          },
        }
      }
    >
      <ModalPortal
        ariaHideApp={false}
        bodyOpenClassName="ReactModal__Body--open"
        className="add-room-modal"
        closeTimeoutMS={0}
        contentLabel="Parent Modal"
        defaultStyles={
          Object {
            "content": Object {
              "WebkitOverflowScrolling": "touch",
              "background": "#fff",
              "border": "1px solid #ccc",
              "borderRadius": "4px",
              "bottom": "40px",
              "left": "40px",
              "outline": "none",
              "overflow": "auto",
              "padding": "20px",
              "position": "absolute",
              "right": "40px",
              "top": "40px",
            },
            "overlay": Object {
              "backgroundColor": "rgba(255, 255, 255, 0.75)",
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
            },
          }
        }
        isOpen={true}
        onAfterOpen={[Function]}
        onRequestClose={[Function]}
        parentSelector={[Function]}
        portalClassName="ReactModalPortal"
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={false}
        shouldFocusAfterRender={true}
        shouldReturnFocusAfterClose={true}
        style={
          Object {
            "content": Object {
              "backgroundColor": "#ffffff",
              "border": "1px solid #CCCCCC",
              "borderRadius": "4px",
              "bottom": "auto",
              "boxShadow": "0 2px 40px 10px rgba(185, 180, 180, 0.2)",
              "fontFamily": "DINPro-Regular",
              "left": "50%",
              "marginRight": "-50%",
              "outline": "none",
              "overflow": "auto",
              "position": "absolute",
              "right": "auto",
              "top": "50%",
              "transform": "translate(-50%, -50%)",
            },
          }
        }
      >
        <div
          aria-modal="true"
          className="ReactModal__Overlay ReactModal__Overlay--after-open"
          onClick={[Function]}
          onMouseDown={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.75)",
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            aria-label="Parent Modal"
            className="ReactModal__Content ReactModal__Content--after-open add-room-modal"
            onClick={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "border": "1px solid #CCCCCC",
                "borderRadius": "4px",
                "bottom": "auto",
                "boxShadow": "0 2px 40px 10px rgba(185, 180, 180, 0.2)",
                "fontFamily": "DINPro-Regular",
                "left": "50%",
                "marginRight": "-50%",
                "outline": "none",
                "overflow": "auto",
                "position": "absolute",
                "right": "auto",
                "top": "50%",
                "transform": "translate(-50%, -50%)",
              }
            }
            tabIndex="-1"
          >
            <h2>
              ADD ROOM
            </h2>
            <form
              className="modal-form kla-form"
              onSubmit={[Function]}
            >
              <SelectImage
                imageUrl=""
                onChange={[Function]}
                thumbnailName="Upload a thumbnail"
              >
                <div
                  className="image-select"
                >
                  <div
                    className="thumbnail"
                  >
                    <div
                      className="placeholder"
                    >
                      <img
                        alt="Placeholder"
                        src="test-file-stub"
                      />
                    </div>
                  </div>
                  <div
                    className="select-button"
                  >
                    <span>
                      Upload a thumbnail
                    </span>
                    <ThemedThemed
                      composeTheme="deeply"
                      disabled={false}
                      id="upload_widget_opener"
                      label="Select Image"
                      mapThemrProps={[Function]}
                      ripple={true}
                      rippleCentered={false}
                      rippleClassName=""
                      rippleMultiple={true}
                      rippleSpread={2}
                    >
                      <ThemedRippledComponent
                        composeTheme="deeply"
                        disabled={false}
                        id="upload_widget_opener"
                        label="Select Image"
                        mapThemrProps={[Function]}
                        ripple={true}
                        rippleCentered={false}
                        rippleClassName=""
                        rippleMultiple={true}
                        rippleSpread={2}
                        theme={Object {}}
                      >
                        <RippledComponent
                          disabled={false}
                          id="upload_widget_opener"
                          label="Select Image"
                          ripple={true}
                          rippleCentered={false}
                          rippleClassName=""
                          rippleMultiple={true}
                          rippleSpread={2}
                          theme={Object {}}
                        >
                          <Button
                            accent={false}
                            className=""
                            disabled={false}
                            flat={false}
                            floating={false}
                            id="upload_widget_opener"
                            label="Select Image"
                            mini={false}
                            neutral={true}
                            onMouseDown={[Function]}
                            onTouchStart={[Function]}
                            primary={false}
                            raised={false}
                            theme={Object {}}
                            type="button"
                          >
                            <button
                              className=""
                              data-react-toolbox="button"
                              disabled={false}
                              id="upload_widget_opener"
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchStart={[Function]}
                              type="button"
                            >
                              Select Image
                            </button>
                          </Button>
                        </RippledComponent>
                      </ThemedRippledComponent>
                    </ThemedThemed>
                    <div
                      className="invisible-input"
                    >
                      <input
                        name="selectImage"
                        onChange={[Function]}
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </SelectImage>
              <Input
                id="roomName"
                inputClass="mrm-input default-input"
                labelClass="input1"
                labelName="Room Name"
                name="roomName"
                onChange={[Function]}
                placeholder="Enter room name"
                required={true}
                type="text"
                value=""
              >
                <div
                  className="input1"
                >
                  <label
                    htmlFor="roomName"
                  >
                    Room Name
                    <input
                      className="mrm-input default-input"
                      defaultValue=""
                      id="roomName"
                      name="roomName"
                      onChange={[Function]}
                      placeholder="Enter room name"
                      required={true}
                      type="text"
                    />
                  </label>
                </div>
              </Input>
              <div
                className="select-input"
              >
                <SelectInput
                  id="roomFloor"
                  labelText="Select Floor"
                  name="roomFloor"
                  onChange={[Function]}
                  options={null}
                  placeholder="Select floor"
                  placeholderValue=""
                  required={false}
                  selectInputClassName="floor-wrapper default-select"
                  value=""
                  wrapperClassName="floor-wrapper"
                >
                  <div
                    className="floor-wrapper"
                  >
                    <label
                      htmlFor="roomFloor"
                    >
                      Select Floor
                      <select
                        className="floor-wrapper default-select"
                        id="roomFloor"
                        name="roomFloor"
                        onChange={[Function]}
                        required={false}
                        value=""
                      >
                        <option
                          value=""
                        >
                          Select floor
                        </option>
                        You need to provide atleast children or options to the select element
                      </select>
                    </label>
                  </div>
                </SelectInput>
              </div>
              <div
                className="select-input"
              >
                <SelectInput
                  id="roomCapacity"
                  labelText="Room Capacity"
                  name="roomCapacity"
                  onChange={[Function]}
                  options={null}
                  placeholder="0"
                  placeholderValue=""
                  required={false}
                  selectInputClassName="capacity-wrapper default-select"
                  value=""
                  wrapperClassName="capacity-wrapper"
                >
                  <div
                    className="capacity-wrapper"
                  >
                    <label
                      htmlFor="roomCapacity"
                    >
                      Room Capacity
                      <select
                        className="capacity-wrapper default-select"
                        id="roomCapacity"
                        name="roomCapacity"
                        onChange={[Function]}
                        required={false}
                        value=""
                      >
                        <option
                          value=""
                        >
                          0
                        </option>
                        You need to provide atleast children or options to the select element
                      </select>
                    </label>
                  </div>
                </SelectInput>
              </div>
              <div
                className="clearfix"
              />
              <ActionButtons
                actionButtonClassName="action-button"
                actionButtonText="ADD ROOM"
                cancelButtonClassName="cancel-button"
                cancelButtonText="CANCEL"
                onClickCancel={[Function]}
                withCancel={true}
              >
                <div
                  className="form-action-buttons"
                >
                  <button
                    className="cancel-button"
                    onClick={[Function]}
                  >
                    CANCEL
                  </button>
                  <button
                    className="action-button"
                    type="submit"
                  >
                    ADD ROOM
                  </button>
                </div>
              </ActionButtons>
            </form>
          </div>
        </div>
      </ModalPortal>
    </Modal>
  </MrmModal>
</AddRoom>
`;

exports[`AddRoomToKampala should render properly 1`] = `
<AddRoom
  locations={
    Array [
      Object {
        "__typename": "Location",
        "id": "1",
        "name": "Kampala",
      },
      Object {
        "__typename": "Location",
        "id": "2",
        "name": "Lagos",
      },
      Object {
        "__typename": "Location",
        "id": "3",
        "name": "Nairobi",
      },
    ]
  }
>
  <MrmModal
    buttonText="The Crest"
    className="add-room-modal"
    closeModal={false}
    handleCloseRequest={[Function]}
    modalButtonClassName="button"
    title="ADD ROOM"
  >
    <IconButtons
      buttonText="The Crest"
      modalButtonClassName="button"
      openModal={[Function]}
    >
      <button
        className="button"
        id="modal-button"
        onClick={[Function]}
      >
        The Crest
      </button>
    </IconButtons>
    <Modal
      ariaHideApp={false}
      bodyOpenClassName="ReactModal__Body--open"
      className="add-room-modal"
      closeTimeoutMS={0}
      contentLabel="Parent Modal"
      isOpen={false}
      onAfterOpen={[Function]}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={false}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "backgroundColor": "#ffffff",
            "border": "1px solid #CCCCCC",
            "borderRadius": "4px",
            "bottom": "auto",
            "boxShadow": "0 2px 40px 10px rgba(185, 180, 180, 0.2)",
            "fontFamily": "DINPro-Regular",
            "left": "50%",
            "marginRight": "-50%",
            "outline": "none",
            "overflow": "auto",
            "position": "absolute",
            "right": "auto",
            "top": "50%",
            "transform": "translate(-50%, -50%)",
          },
        }
      }
    >
      <ModalPortal
        ariaHideApp={false}
        bodyOpenClassName="ReactModal__Body--open"
        className="add-room-modal"
        closeTimeoutMS={0}
        contentLabel="Parent Modal"
        defaultStyles={
          Object {
            "content": Object {
              "WebkitOverflowScrolling": "touch",
              "background": "#fff",
              "border": "1px solid #ccc",
              "borderRadius": "4px",
              "bottom": "40px",
              "left": "40px",
              "outline": "none",
              "overflow": "auto",
              "padding": "20px",
              "position": "absolute",
              "right": "40px",
              "top": "40px",
            },
            "overlay": Object {
              "backgroundColor": "rgba(255, 255, 255, 0.75)",
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
            },
          }
        }
        isOpen={false}
        onAfterOpen={[Function]}
        onRequestClose={[Function]}
        parentSelector={[Function]}
        portalClassName="ReactModalPortal"
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={false}
        shouldFocusAfterRender={true}
        shouldReturnFocusAfterClose={true}
        style={
          Object {
            "content": Object {
              "backgroundColor": "#ffffff",
              "border": "1px solid #CCCCCC",
              "borderRadius": "4px",
              "bottom": "auto",
              "boxShadow": "0 2px 40px 10px rgba(185, 180, 180, 0.2)",
              "fontFamily": "DINPro-Regular",
              "left": "50%",
              "marginRight": "-50%",
              "outline": "none",
              "overflow": "auto",
              "position": "absolute",
              "right": "auto",
              "top": "50%",
              "transform": "translate(-50%, -50%)",
            },
          }
        }
      />
    </Modal>
  </MrmModal>
</AddRoom>
`;
